--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/icon/logo.ico" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' 'unsafe-eval'"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chrome Extensioin + React + TS + Vite App - Popup</title>
   </head>
   <body>
     <div id="app"></div>
+    <iframe type="module" src="/sandbox.html"> </iframe>
     <script type="module" src="/src/popup/index.tsx"></script>
   </body>
 </html>
