--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
       content="script-src 'self' 'unsafe-eval'"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chrome Extensioin + React + TS + Vite App - Popup</title>
+    <title>Open AI - Preview</title>
   </head>
   <body>
     <div id="app"></div>
